alphabetize button working

--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -25,12 +25,7 @@ $(document).on('turbolinks:load', function() {
 		  // names must be equal
 		  return 0;
 		});
-        console.log(response);// it works up to here
         var format = alphabetizeIndexShow(response);
-        //console.log(format);
-        //$(".daysList").html(format);
-        console.log("everything should have worked");
-        //$("#day-" + id).html(dayText);
     })
     function alphabetizeIndexShow(response) {
     	var listOfObjects = [];
@@ -38,15 +33,8 @@ $(document).on('turbolinks:load', function() {
     		var dayId = element["id"];
     		var dayDayDate = element["day_day_date"];
     		var dayFocus = element["day_focus"];
-	        //var hour = element["hours"].map(function (hour) {
-	        //	return hour["hour_number"] + ": "});
-	        //var task = element["tasks"].map(function (task) {
-	        //    return task["task_content"]});
-	        //var hourwithtask = hour.map(function(e, i) {
-	        //    return "<li>" + e + task[i] + "</li>"}).join('');
-	        var dayText = "<li> "+ dayDayDate + "</li>" + "<p> Focus: "+ dayFocus + dayId + "</p><button class=" + "js-more" + " data-id=" + dayId + ">More Info</button>"; //<ul>" + hourwithtask + "</ul>" ;//
-	        //return dayFocus;
-	        //console.log(dayText);
+    		var dayLink = dayDayDate.link("http://localhost:3000/days/" + dayId)
+	        var dayText = '<li>'+ dayLink + '</li>' + '<div>Focus: '+ dayFocus + '</div>';
 	        listOfObjects.push(dayText);
     	});
     	$(".daysList").html(listOfObjects);   	
